--- a/style.css
+++ b/style.css
@@ -14,8 +14,9 @@ body {
 
 .container {
     width: 400px;
-    margin: 0 auto;
+    margin: auto auto;
     text-align: center;
+    margin-top: 15%;
 }
 
 .title {
